@@ -10,14 +10,14 @@ services:
       - datastores
     links:
       - mysql
-    entrypoint:
+    #entrypoint:
     # Uncomment this line to do any of the below options.
-      - /usr/local/bin/within_carton
+    #  - /usr/local/bin/within_carton
     # Uncomment this line to run specific tests.
-      - prove
-      - -v
+    #  - prove
+    #  - -v
     #  - t/02_loader.t
-      - t/03_load.t
+    #  - t/03_load.t
     #  - t/05_drivers.t
     #  - t/06_model.t
     # Uncomment this line to get test-coverage statistics.
