@@ -13,10 +13,9 @@ sub opt_spec {
   my $self = shift;
   return (
     $self->opt_spec_for(qw(
-      base_directory connection
+      base_directory connection model
     )),
     [ 'specification=s', "Specification file" ],
-    [ 'model=s', "Model file" ],
     [ 'seed=s', "Initial seed" ],
   );
 }
@@ -38,13 +37,7 @@ sub validate_args {
   $self->{spec} = $self->read_file($self->{specification})
     or $self->usage_error("--specification '$opts->{specification}' is not YAML/JSON");
 
-  if (exists $opts->{model}) {
-    $self->{model_file} = $self->find_file($opts, $opts->{model})
-      or $self->usage_error("--model '$opts->{model}' not found");
-
-    $self->{model} = $self->read_file($self->{model_file})
-      or $self->usage_error("--model '$opts->{model}' is not YAML/JSON");
-  }
+  $self->validate_model_file($opts, $args);
 
   if (exists $opts->{seed}) {
     unless (($opts->{seed}//'') =~ /^\d\.\d+$/) {
